<resources>
    <string name="app_name">eCommerce1</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forget Password ?</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="logout">Logout</string>
    <string name="welcome_page">Welcome Page</string>
    <string name="please_enter_email_id">Please Enter Email id</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="furniture">Furniture</string>
    <string name="aluminium_chair">aluminium_chair</string>
    <string name="armchair">armchair</string>
    <string name="basketball_hoop">basketball_hoop</string>
    <string name="bench">bench</string>
    <string name="chemini">chemini</string>
    <string name="college_table">college_table</string>
    <string name="cottage_light">cottage_light</string>
    <string name="door">door</string>
    <string name="door_2">door_2</string>
    <string name="drawer">drawer</string>
    <string name="eb_nightstand">eb_nightstand</string>
    <string name="football">football</string>
    <string name="hitachi">hitachi</string>
    <string name="kitchen_1_wardrobe">kitchen_1_wardrobe</string>
    <string name="kitchen_wardrobe">kitchen_wardrobe</string>
    <string name="outdoorparkbenches">outdoorparkbenches</string>
    <string name="ps4">ps4</string>
    <string name="samsung_led_tv">samsung_led_tv</string>
    <string name="office_chair">office_chair</string>
    <string name="shelf">shelf</string>
    <string name="sink">Sink</string>
    <string name="sink_long">Sink_long</string>
    <string name="sofa">Sofa</string>
    <string name="table">Table</string>
    <string name="table_chair">Table_chair</string>
    <string name="toilet">Toilet</string>
    <string name="treadmill">Treadmill</string>
    <string name="tvcabine">TVcabine</string>
    <string name="whirlpool_gas_cooker">Whirlpool_gas_cooker</string>
    <string name="wineglass">Wineglass</string>
    <string name="appinfo">AppInfo</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="help">Help</string>
    <string name="step_1">Step 1:</string>
    <string name="step_2">Step 2:</string>
    <string name="click_on_furniture_button">Click on Furniture Button.</string>
    <string name="click_on_any_furniture_image">Click on Any Furniture Image</string>
    <string name="then_find_flat_surface_and_click_on_it_that_surface">Then Find Flat Surface and Click on It that Surface</string>
    <string name="step_3">Step 3:</string>
    <string name="step_4">Step 4:</string>
    <string name="selected_furniture_shown_in_your_screen">Selected Furniture Shown in Your Screen.</string>
</resources>
